# dexpert-app

./: .env.example  .gitignore  archetecture.md  instruction.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  tsconfig.base.json  watcher.py
engine/: .env.example  main.py  package.json  pyproject.toml  requirements.txt
engine/.pcagent_browser_profile/: Local State  first_party_sets.db
engine/.pcagent_browser_profile/Default/: DIPS  DIPS-wal  Favicons  History  History-journal  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state  trusted_vault.pb
engine/.pcagent_browser_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  index
engine/.pcagent_browser_profile/GraphiteDawnCache/: data_1  index
engine/.pcagent_browser_profile/ShaderCache/: data_1  index
engine/.pcagent_browser_profile/segmentation_platform/: ukm_db
engine/PCAGENT_WORKSPACE/: script_b3effe04.bat  script_b93b637c.bat  script_ba2c4fed.bat
engine/agents/: __init__.py  base.py
engine/agents/browser/: agent.py  context.py  manager.py  state.py
engine/agents/os/: agent.py  context.py
engine/agents/planner/: agent.py  models.py
engine/api/: __init__.py  dependencies.py  server.py
engine/api/routers/: agents.py  extensions.py  health.py  sessions.py  settings.py
engine/api/websocket/: handler.py  manager.py  protocol.py
engine/core/: __init__.py  scratchpad.py
engine/core/config/: __init__.py  defaults.yaml  settings.py
engine/core/context/: __init__.py  episodic.py  hud.py  strategy.py
engine/core/llm/: __init__.py  cache.py  client.py  parser.py  (+1 more)
engine/extensions/: manager.py
engine/scripts/: test_imports.py  test_planner_browser.py  test_planner_os.py
engine/tests/: conftest.py
engine/tools/: registry.py
engine/utils/: __init__.py  exceptions.py  logger.py
(+958 files in other folders)
