[package]
name = "dexpert-perception"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"

# ----------------- WINDOWS -----------------
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Com", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation", "Win32_System_Ole", "Win32_System_Variant",
    "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_HiDpi",
] }

# ----------------- MACOS -----------------
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.1.3"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
objc = "0.2.7"
cocoa = "0.24.0"

# ----------------- LINUX -----------------
[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.19.0"
zbus = "3.14"